--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ p {
   0% {
     transform: translateX(-25%);
   }
+
   100% {
     transform: translateX(25%);
   }
@@ -59,7 +60,7 @@ p {
   height: 100vh;
 }
 
-#about-me > div {
+#about-me>div {
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -67,7 +68,7 @@ p {
 }
 
 @media (max-width: 455px) {
-  #about-me > div {
+  #about-me>div {
     height: 140vh;
   }
 }
@@ -87,26 +88,48 @@ p {
 }
 
 #my-face {
-  width: 225px;
+  width: 220px;
   height: 200px;
   border-radius: 50%;
 }
 
-.project-img {
-  height: 200px;
-  width: 300px;
+#project img {
+  max-width: 100%;
+  height: auto;
 }
 
-.project-card {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  margin: 3px;
+.flip-card {
+  perspective: 1000px;
 }
 
-#projects {
-  padding: 48px;
+.flip-card-inner {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
-.project-container {
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  transform: rotateY(0deg);
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
 }
