--- a/style.css
+++ b/style.css
@@ -93,43 +93,69 @@ p {
   border-radius: 50%;
 }
 
-#project img {
-  max-width: 100%;
-  height: auto;
+.card-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* additional */
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.card-container {
+  width: 500px;
+  height: 350px;
+}
+
+.card-container:hover>.flip-card {
+  cursor: pointer;
+  transform: rotateY(180deg);
 }
 
 .flip-card {
-  perspective: 1000px;
-}
-
-.flip-card-inner {
-  width: 100%;
   height: 100%;
+  width: 100%;
+  position: relative;
+  transition: transform 1000ms;
   transform-style: preserve-3d;
-  transition: transform 0.5s;
 }
 
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front {
-  width: 100%;
+.front,
+.back {
   height: 100%;
+  width: 100%;
+  border-radius: 2rem;
+  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
   position: absolute;
   backface-visibility: hidden;
+  padding: 20px;
 }
 
-.flip-card-back {
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
+.front {
+  background-size: cover;
+  background-position: center;
 }
 
-.flip-card-front {
-  transform: rotateY(0deg);
-}
-
-.flip-card-back {
+.back {
+  background-color: #222831;
   transform: rotateY(180deg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-weight: lighter;
+}
+
+#portfolio {
+  background-image: url(images/portfolio.jpg);
+}
+
+#to-do-list-app {
+  background-image: url(images/to-do-list-app.png);
+}
+
+#keeper-app {
+  background-image: url(images/keeper-app.png);
 }
