--- a/style.css
+++ b/style.css
@@ -2,42 +2,8 @@ html {
   height: 100%;
 }
 
-body {
+* {
   margin: 0;
-}
-
-.bg {
-  animation: slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
-  bottom: 0;
-  left: -50%;
-  opacity: 0.5;
-  position: fixed;
-  right: -50%;
-  top: 0;
-  z-index: -1;
-}
-
-.bg2 {
-  animation-direction: alternate-reverse;
-  animation-duration: 4s;
-}
-
-.bg3 {
-  animation-duration: 5s;
-}
-
-.content {
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 0.25em;
-  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
-  box-sizing: border-box;
-  left: 50%;
-  padding: 10vmin;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  transform: translate(-50%, -50%);
 }
 
 h1,
@@ -46,18 +12,25 @@ p {
   font-weight: bold;
 }
 
-@keyframes slide {
-  0% {
-    transform: translateX(-25%);
-  }
-
-  100% {
-    transform: translateX(25%);
-  }
-}
-
 #top-banner {
   height: 100vh;
+  background-image: url(images/top3.jpg);
+  background-size: cover;
+  overflow: hidden;
+}
+
+.content {
+  left: 50%;
+  padding: 20px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.content>h1 {
+  font-size: 80px;
+  white-space: nowrap;
 }
 
 #about-me>div {
@@ -211,12 +184,59 @@ p {
   height: 100%;
 }
 
+#contact {
+  width: 100%;
+  height: 100vh;
+  background: #001660;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#contact .container {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
+}
+
+#contact h3 {
+  color: #555;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+#contact input,
+#contact textarea {
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  background-color: #f5f5f5;
+  font-size: 16px;
+}
+
+#contact button {
+  padding: 15px;
+  background-color: #ff5361;
+  color: #fff;
+  font-size: 18px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  margin: 20px auto 0;
+  border-radius: 30px;
+}
+
 /* iPhone X || 375 x 812 || Default */
 @media only screen and (max-width: 812px) {
   .grid-container {
     display: table;
   }
-
 
   .timeline:before {
     left: 40px;
