--- a/style.css
+++ b/style.css
@@ -155,6 +155,14 @@ nav {
   background-image: url(images/keeper-app.png);
 }
 
+#melapp {
+  background-image: url(images/melapp.png);
+}
+
+#test {
+  background-image: url(images/keeper-app.png);
+}
+
 /* skill section */
 
 #skill>div.icon-container {
